Fixed height on mobile #145

--- a/projects/ng-dialogs/src/styles/ag-grid.styles.scss
+++ b/projects/ng-dialogs/src/styles/ag-grid.styles.scss
@@ -1,7 +1,3 @@
-.ag-body-viewport {
-  // @extend .hide-scrollbar;
-}
-
 .ag-theme-material {
   width: 100%;
   height: 500px;
